log/build_2022-02-26_15-21-38/audio/stderr.log
  File "/home/angel/concurso-audio-practica/install/audio/lib/python3.8/site-packages/audio/audioSubscriber.py", line 40
    aux2 = "", aux3 = ""
           ^
SyntaxError: cannot assign to literal

